--- a/tmux.1
+++ b/tmux.1
@@ -783,7 +783,7 @@ With
 .Fl t ,
 display the log for
 .Ar target-client .
-.Fl I,
+.Fl I ,
 .Fl J
 and
 .Fl T
@@ -2499,7 +2499,7 @@ Display
 will be passed through
 .Xr strftime 3
 and formats (see
-.Sx FORMATS Ns )
+.Sx FORMATS )
 will be expanded.
 It may also contain any of the following special character sequences:
 .Bl -column "Character pair" "Replaced with" -offset indent
