--- a/tmux.1
+++ b/tmux.1
@@ -23,7 +23,7 @@
 .Sh SYNOPSIS
 .Nm tmux
 .Bk -words
-.Op Fl 28lCquv
+.Op Fl 2lCquv
 .Op Fl c Ar shell-command
 .Op Fl f Ar file
 .Op Fl L Ar socket-name
@@ -2637,9 +2637,9 @@ The terminal entry value is passed through
 before interpretation.
 The default value forcibly corrects the
 .Ql colors
-entry for terminals which support 88 or 256 colours:
+entry for terminals which support 256 colours:
 .Bd -literal -offset indent
-"*88col*:colors=88,*256col*:colors=256,xterm*:XT"
+"*256col*:colors=256,xterm*:XT"
 .Ed
 .It Ic update-environment Ar variables
 Set a space-separated string containing a list of environment variables to be
