--- a/TODO
+++ b/TODO
@@ -131,5 +131,6 @@
 	  table, first an implicit table in which C-b is the only default
 	  binding to a command that says "next key from $othertable" and so
 	  on. means -n can go away as well
-
+	* customizable command aliases
+	* get_cwd for cgywin
 
