Extend the -q flag to set-option to suppress errors about unknown options - this will allow options to be removed more easily.

--- a/tmux.1
+++ b/tmux.1
@@ -2047,9 +2047,7 @@ flag prevents setting an option that is already set.
 .Pp
 The
 .Fl q
-flag suppresses the informational message (as if the
-.Ic quiet
-server option was set).
+flag suppresses errors about unknown options.
 .Pp
 With
 .Fl a ,
