Make -S- and -E- mean the start and end to capture-pane to avoid having to faff around with huge numbers to get everything.

--- a/tmux.1
+++ b/tmux.1
@@ -1148,6 +1148,12 @@ and
 .Fl E
 specify the starting and ending line numbers, zero is the first line of the
 visible pane and negative numbers are lines in the history.
+.Ql -
+to
+.Fl S
+is the start of the history and to
+.Fl E
+the end of the visible pane.
 The default is to capture only the visible contents of the pane.
 .It Xo
 .Ic choose-client
