--- a/FAQ
+++ b/FAQ
@@ -104,6 +104,10 @@ aware of are (bearing in mind I haven't used screen for a few years now):
 
 * I found a bug! What do I do?
 
+Check the latest version of tmux from Git to see if the problem is still
+reproducible.  Sometimes the length of time between releases means a lot of
+fixes can be sitting in Git and the problem might already be fixed.
+
 Please send bug reports by email to nicm@users.sourceforge.net or
 tmux-users@lists.sourceforge.net. Please include as much of the following
 information as possible:
