--- a/tmux.1
+++ b/tmux.1
@@ -1292,7 +1292,7 @@ flag, see the
 section.
 This command works only if at least one client is attached.
 .It Ic display-panes Op Fl t Ar target-client
-.D1 (alias: Ic displayp)
+.D1 (alias: Ic displayp )
 Display a visible indicator of each pane shown by
 .Ar target-client .
 See the
@@ -1382,9 +1382,16 @@ The
 .Fl a
 option kills all but the window given with
 .Fl t .
-.It Ic last-pane Op Fl t Ar target-window
+.It Xo Ic last-pane
+.Op Fl de
+.Op Fl t Ar target-window
+.Xc
 .D1 (alias: Ic lastp )
 Select the last (previously selected) pane.
+.Fl e
+enables or
+.Fl d
+disables input to the pane.
 .It Ic last-window Op Fl t Ar target-session
 .D1 (alias: Ic last )
 Select the last (previously selected) window.
@@ -1701,7 +1708,7 @@ and
 .Ic previous-layout
 commands.
 .It Xo Ic select-pane
-.Op Fl lDLRU
+.Op Fl DdeLlRU
 .Op Fl t Ar target-pane
 .Xc
 .D1 (alias: Ic selectp )
@@ -1721,6 +1728,10 @@ target pane is used.
 is the same as using the
 .Ic last-pane
 command.
+.Fl e
+enables or
+.Fl d
+disables input to the pane.
 .It Xo Ic select-window
 .Op Fl lnpT
 .Op Fl t Ar target-window
