Fix typo (paneas -> panes).

--- a/tmux.1
+++ b/tmux.1
@@ -2436,7 +2436,7 @@ see the
 option.
 Attributes are ignored.
 .It Ic pane-border-style Ar style
-Set the pane border style for paneas aside from the active pane.
+Set the pane border style for panes aside from the active pane.
 For how to specify
 .Ar style ,
 see the
