--- a/tmux.1
+++ b/tmux.1
@@ -435,10 +435,11 @@ first attempts to use the argument as a pane index; if that fails, it is looked
 up as for
 .Ar target-window .
 A
-.Ql +
-or
+.Ql + ,
 .Ql -
-indicate the next or previous pane index, respectively.
+or
+.Ql \&!
+indicate the next, previous or last pane.
 One of the strings
 .Em top ,
 .Em bottom ,
