--- a/tmux.1
+++ b/tmux.1
@@ -912,6 +912,7 @@ The following keys are supported as appropriate for the mode:
 .It Li "Rectangle toggle" Ta "v" Ta "R"
 .It Li "Scroll down" Ta "C-Down or C-e" Ta "C-Down"
 .It Li "Scroll up" Ta "C-Up or C-y" Ta "C-Up"
+.It Li "Select line" Ta "" Ta "V"
 .It Li "Search again" Ta "n" Ta "n"
 .It Li "Search again in reverse" Ta "N" Ta "N"
 .It Li "Search backward" Ta "?" Ta "C-r"
